update fort.4 for cy49t1

--- a/cy49/arp/fort.4
+++ b/cy49/arp/fort.4
@@ -597,6 +597,14 @@
    LAPRXPK=.TRUE.,
    LREGETA=.FALSE.,
  /
+ &NAMDWET
+ /
+ &NAM_PARAM_ICEN
+ /
+ &NAM_NEBN
+ /
+ &NAM_TURBN
+ /
  &NAMCVMNH
    LSMOOTH=.FALSE.,
    OTADJS=10800.,
