update fort.4 for cy49t1

--- a/cy49/arp/fort.4
+++ b/cy49/arp/fort.4
@@ -592,10 +592,18 @@
  /
  &NAMCVER
    LVERTFE=.TRUE.,
-   NVFE_TYPE=1,
+   NVFE_TYPE=3,
    NDLNPR=0,
    LAPRXPK=.TRUE.,
    LREGETA=.FALSE.,
+ /
+ &NAMDWET
+ /
+ &NAM_PARAM_ICEN
+ /
+ &NAM_NEBN
+ /
+ &NAM_TURBN
  /
  &NAMCVMNH
    LSMOOTH=.FALSE.,
